# oxidio

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: generate-release.yml
crates/oxidio-cli/: Cargo.toml  build.rs
crates/oxidio-cli/src/: browser.rs  cli.rs  discord.rs  input.rs  main.rs  media_controls.rs  settings.rs  view.rs
crates/oxidio-core/: Cargo.toml
crates/oxidio-core/src/: command.rs  decoder.rs  lib.rs  library.rs  output.rs  player.rs  playlist.rs
