[workspace]
resolver = "2"
members = [
    "crates/oxidio-core",
    "crates/oxidio-cli",
]

[workspace.package]
version = "1.0.0-RC.4"
edition = "2021"
license = "MIT"
authors = ["Nathan Baker"]

[workspace.dependencies]
# Audio
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
rubato = "0.16"

# Media controls (platform-specific, defined in oxidio-cli)

# Async
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
dirs = "5"

# Internal
oxidio-core = { path = "crates/oxidio-core", version = "1.0.0-RC.4" }
