[package]
name = "oxidio-cli"
description = "Terminal UI for Oxidio music player"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "oxidio"
path = "src/main.rs"

[dependencies]
oxidio-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dirs.workspace = true
discord-rich-presence = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
souvlaki = "0.7"
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }

[build-dependencies]
winres = "0.1"
