[package]
name = "oxidio-core"
description = "Core audio playback engine for Oxidio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
symphonia.workspace = true
cpal.workspace = true
rubato.workspace = true
dirs.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
